# AutoShorts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/auto_shorts/: __main__.py  main.py
src/auto_shorts/api/download/: __init__.py
src/auto_shorts/api/edit/: __init__.py  text_to_speech.py
src/auto_shorts/api/edit/audio/: subtitles.py
src/auto_shorts/api/edit/audio/_autosub/: __init__.py
src/auto_shorts/api/edit/video/: __init__.py  cut.py  subtitles.py  text.py
src/auto_shorts/interface/: video_player.py
